5/18/11 generalize wires for connecting battery to parallel capacitors
5/18/11 add wires to parallel circuits (model and view)
5/18/11 add wires to series circuits (model and view)
5/18/11 create general capacitor-to-capacitor wire
5/18/11 create model.wire package and factor out some reusable wires
5/18/11 center current indicators on wires in "single" circuit
5/18/11 display wires in "single" circuit
5/18/11 add Wire constructor that has a Function0 arg for creating wire segments
5/18/11 add current indicators to circuit view base class
5/18/11 move current amplitude to circuit model base class
5/18/11 implement Combination1Circuit and Combination2Circuit.getVoltageAt for battery and plates
5/18/11 implement SeriesCircuit.getVoltageAt for battery and plates
5/18/11 fix: rewire CircuitChangeListener in EFieldDetector.setCircuit and BarMeter.setCircuit
5/18/11 implement ParallelCircuit.getVoltageAt for battery and plates
5/18/11 fix: rewire CircuitChangeListener in Voltmeter.setCircuit
5/18/11 simplify SingleCircuit.getVoltageAt
5/18/11 add Battery.intersectsBottomTerminal
5/18/11 partition model into subpackages
5/17/11 attempt to show circuit layouts in javadoc
5/17/11 add circuits for series-parallel combinations
5/17/11 tweak plate size and capacitor spacing so that 3 series and parallel capacitors fit in the play area
5/17/11 add parallel circuits
5/17/11 populate series circuit with capacitors
5/17/11 first pass at Series circuits (not populated with capacitors yet)
5/17/11 create NullCircuit and NullCircuitNode, placeholders for circuits that haven't been implemented yet
5/17/11 create base class for circuit nodes, AbstractCircuitNode
5/17/11 move lots of stuff to AbstractCircuit
5/17/11 add ICircuit.getCapacitors, create skeleton of SeriesCircuit, identify things to move to AbstractCircuit
5/17/11 move battery and listeners to AbstractCircuit
5/17/11 create SingleCircuitNode, add factory method for creating circuit nodes