@@ -1,3 +1,4 @@
+5/18/11 add wires to combo circuits 1 (model and view)
 5/18/11 generalize wires for connecting battery to parallel capacitors
 5/18/11 add wires to parallel circuits (model and view)
 5/18/11 add wires to series circuits (model and view)
